add highlight section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,49 @@
         >
       </div>
     </header>
+    <!-- Header -->
+
+    <section class="highlights">
+      <article class="highlight-card">
+        <div class="bottom-pos">
+          <h2 class="primary-text ">Opal cuts off your apps’ internet access to help you stop doomscrolling</h2>
+          <p class="secondary-text">
+            <span>by Ivan Mehta</span>
+            <i class="far fa-clock"></i>
+            <time>1 hour ago</time>
+            <i class="fas fa-share-alt"></i>
+            6
+          </p>
+        </div>
+      </article>
+      <article class="highlight-card">
+        <div class="bottom-pos">
+          <h2 class="primary-text ">Opal cuts off your apps’ internet access to help you stop doomscrolling</h2>
+          <p class="secondary-text">
+            <span>by Ivan Mehta</span>
+            <i class="far fa-clock"></i>
+            <time>1 hour ago</time>
+            <i class="fas fa-share-alt"></i>
+            6
+          </p>
+        </div>
+      </article>
+      <article class="highlight-card">
+        <div class="bottom-pos">
+          <h2 class="primary-text ">Opal cuts off your apps’ internet access to help you stop doomscrolling</h2>
+          <p class="secondary-text">
+            <span>by Ivan Mehta</span>
+            <i class="far fa-clock"></i>
+            <time>1 hour ago</time>
+            <i class="fas fa-share-alt"></i>
+            6
+          </p>
+        </div>
+      </article>
+    </section> 
+    <div class="dummy"></div>
+
+    <!-- Footer -->
     <footer>
       <div class="footer-top">
         <div class="icons">
