--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
-    <link href="//db.onlinewebfonts.com/c/57acd77a5a43cb11d805162d859eac55?family=Shentox" rel="stylesheet" type="text/css"/>
+    <link
+      href="//db.onlinewebfonts.com/c/57acd77a5a43cb11d805162d859eac55?family=Shentox"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script
       src="https://kit.fontawesome.com/080dba293e.js"
       crossorigin="anonymous"
@@ -45,7 +49,10 @@
     <section class="highlights">
       <article class="highlight-card">
         <div class="bottom-pos">
-          <h2 class="primary-text ">Opal cuts off your apps’ internet access to help you stop doomscrolling</h2>
+          <h2 class="primary-text">
+            Opal cuts off your apps’ internet access to help you stop
+            doomscrolling
+          </h2>
           <p class="secondary-text">
             <span>by Ivan Mehta</span>
             <i class="far fa-clock"></i>
@@ -57,7 +64,10 @@
       </article>
       <article class="highlight-card">
         <div class="bottom-pos">
-          <h2 class="primary-text ">Opal cuts off your apps’ internet access to help you stop doomscrolling</h2>
+          <h2 class="primary-text">
+            Opal cuts off your apps’ internet access to help you stop
+            doomscrolling
+          </h2>
           <p class="secondary-text">
             <span>by Ivan Mehta</span>
             <i class="far fa-clock"></i>
@@ -69,7 +79,10 @@
       </article>
       <article class="highlight-card">
         <div class="bottom-pos">
-          <h2 class="primary-text ">Opal cuts off your apps’ internet access to help you stop doomscrolling</h2>
+          <h2 class="primary-text">
+            Opal cuts off your apps’ internet access to help you stop
+            doomscrolling
+          </h2>
           <p class="secondary-text">
             <span>by Ivan Mehta</span>
             <i class="far fa-clock"></i>
@@ -79,9 +92,40 @@
           </p>
         </div>
       </article>
-    </section> 
-    <div class="dummy"></div>
+    </section>
 
+    <!-- Latest Funding -->
+    <section>
+      <div>
+        <h2>Latest funding rounds on Index.co</h2>
+        <ul>
+          <li><a href="#">See more</a></li>
+          <li><a href="#">Get updates by email</a></li>
+          <li><a href="#">Add info</a></li>
+        </ul>
+      </div>
+      <div class="card-container">
+        <div class="card">
+          <h4 class="card-title">Ringover</h4>
+          <!-- <img src="/assets/ringover-1.png" alt="" height="60px" /> -->
+          <!-- <h4>$12M</h4> -->
+          <!-- <h5>Series A</h5> -->
+          <!-- <p> -->
+          <!-- <i></i> -->
+          <!-- Telecommunications -->
+          <!-- </p> -->
+          <!-- <p> -->
+          <!-- <i></i> -->
+          <!-- Expedition Growth Capital -->
+          <!-- </p> -->
+          <!-- <hr /> -->
+          <!-- <p> -->
+          <!-- Ringover raises $12 million to bring enterprise communications to -->
+          <!-- the cloud <span>on VentureBeat</span> -->
+          <!-- </p> -->
+        </div>
+      </div>
+    </section>
     <!-- Footer -->
     <footer>
       <div class="footer-top">
