complete fund section on mobile

--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
 
     <!-- Latest Funding -->
     <section>
-      <div>
-        <h2>Latest funding rounds on Index.co</h2>
+      <div class="fund-intro">
         <ul>
+          <li><a href="#">
+            <h2>Latest funding rounds on Index.co &gt;</h2> 
+          </a></li>
           <li><a href="#">See more</a></li>
           <li><a href="#">Get updates by email</a></li>
           <li><a href="#">Add info</a></li>
@@ -106,23 +108,94 @@
       </div>
       <div class="card-container">
         <div class="card">
-          <h4 class="card-title">Ringover</h4>
-          <!-- <img src="/assets/ringover-1.png" alt="" height="60px" /> -->
-          <!-- <h4>$12M</h4> -->
-          <!-- <h5>Series A</h5> -->
-          <!-- <p> -->
-          <!-- <i></i> -->
-          <!-- Telecommunications -->
-          <!-- </p> -->
-          <!-- <p> -->
-          <!-- <i></i> -->
-          <!-- Expedition Growth Capital -->
-          <!-- </p> -->
-          <!-- <hr /> -->
-          <!-- <p> -->
-          <!-- Ringover raises $12 million to bring enterprise communications to -->
-          <!-- the cloud <span>on VentureBeat</span> -->
-          <!-- </p> -->
+          <img src="/assets/ringover-1.png" alt="" height="60px" class="fly"/>
+          <div class="card-title">
+            <h4 class="card-info">Ringover</h4>
+          </div>
+          <div class="funding-info">
+            <div class="card-info">
+              <h4>$12M</h4>
+              <h5>Series A</h5>
+            </div>
+          </div>
+          <div class="clear"></div>
+          <div class="fund-tags">
+            <p>
+            <i class="fas fa-tag"></i>
+            Telecommunications
+            </p>
+            <p>
+            <i class="fas fa-briefcase"></i>
+            Expedition Growth Capital
+            </p>
+            <hr class="separate">
+            <p>
+            Ringover raises $12 million to bring enterprise communications to
+            the cloud <span>on VentureBeat</span>
+            </p>
+
+          </div>
+
+        </div>
+        <div class="card">
+          <img src="/assets/ringover-2.png" alt="" height="60px" class="fly"/>
+          <div class="card-title">
+            <h4 class="card-info">Ringover</h4>
+          </div>
+          <div class="funding-info">
+            <div class="card-info">
+              <h4>$12M</h4>
+              <h5>Series A</h5>
+            </div>
+          </div>
+          <div class="clear"></div>
+          <div class="fund-tags">
+            <p>
+            <i class="fas fa-tag"></i>
+            Telecommunications
+            </p>
+            <p>
+            <i class="fas fa-briefcase"></i>
+            Expedition Growth Capital
+            </p>
+            <hr class="separate">
+            <p>
+            Ringover raises $12 million to bring enterprise communications to
+            the cloud <span>on VentureBeat</span>
+            </p>
+
+          </div>
+
+        </div>
+        <div class="card">
+          <img src="/assets/ringover-3.jpeg" alt="" height="60px" class="fly"/>
+          <div class="card-title">
+            <h4 class="card-info">Ringover</h4>
+          </div>
+          <div class="funding-info">
+            <div class="card-info">
+              <h4>$12M</h4>
+              <h5>Series A</h5>
+            </div>
+          </div>
+          <div class="clear"></div>
+          <div class="fund-tags">
+            <p>
+            <i class="fas fa-tag"></i>
+            Telecommunications
+            </p>
+            <p>
+            <i class="fas fa-briefcase"></i>
+            Expedition Growth Capital
+            </p>
+            <hr class="separate">
+            <p>
+            Ringover raises $12 million to bring enterprise communications to
+            the cloud <span>on VentureBeat</span>
+            </p>
+
+          </div>
+
         </div>
       </div>
     </section>
