fix linter errors

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
       </div>
       <div class="header-top-section">
-        <span>
+        <section>
           <img
             alt="The Next Web"
             class="black-bg random"
@@ -53,7 +53,7 @@
             <li><a href="#">README</a></li>
             <li><a href="#">GROWTH QUARTERS</a></li>
           </ul>
-        </span>
+        </section>
         <span class="header-icons">
           <i class="fas fa-search search-icon"></i>
           <i class="fas fa-bars menu-icon hidden-md hidden-lg"></i>
@@ -78,7 +78,7 @@
           <p class="secondary-text">
             <span>by Ivan Mehta</span>
             <i class="far fa-clock"></i>
-            <time>1 hour ago</time>
+            1 hour ago
             <i class="fas fa-share-alt"></i>
             6
           </p>
@@ -93,7 +93,7 @@
           <p class="secondary-text">
             <span>by Ivan Mehta</span>
             <i class="far fa-clock"></i>
-            <time>1 hour ago</time>
+            1 hour ago
             <i class="fas fa-share-alt"></i>
             6
           </p>
@@ -108,7 +108,7 @@
           <p class="secondary-text">
             <span>by Ivan Mehta</span>
             <i class="far fa-clock"></i>
-            <time>1 hour ago</time>
+            1 hour ago
             <i class="fas fa-share-alt"></i>
             6
           </p>
