add latest news section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="milestone.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
@@ -125,6 +126,90 @@
       </article>
     </section>
 
+    <!-- Latest News -->
+
+    <div id="news-card-container">
+      <h2><a href="#">Latest news &gt;</a></h2>
+      <div class="news-card-container">
+        <div class="news-card">
+          <a href="" class="card-img"></a>
+          <div class="news-card-text">
+            <h3>
+              <a href="#"
+                >Want to drive a hydrogen EV in the US? Move to California</a
+              >
+            </h3>
+            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
+            <p class="ter-text">22 minutes ago</p>
+          </div>
+        </div>
+
+        <div class="news-card">
+          <a href="" class="card-img"></a>
+          <div class="news-card-text">
+            <h3>
+              <a href="#"
+                >Want to drive a hydrogen EV in the US? Move to California</a
+              >
+            </h3>
+            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
+            <p class="ter-text">22 minutes ago</p>
+          </div>
+        </div>
+
+        <div class="news-card">
+          <a href="" class="card-img"></a>
+          <div class="news-card-text">
+            <h3>
+              <a href="#"
+                >Want to drive a hydrogen EV in the US? Move to California</a
+              >
+            </h3>
+            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
+            <p class="ter-text">22 minutes ago</p>
+          </div>
+        </div>
+
+        <div class="news-card">
+          <a href="" class="card-img"></a>
+          <div class="news-card-text">
+            <h3>
+              <a href="#"
+                >Want to drive a hydrogen EV in the US? Move to California</a
+              >
+            </h3>
+            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
+            <p class="ter-text">22 minutes ago</p>
+          </div>
+        </div>
+
+        <div class="news-card">
+          <a href="" class="card-img"></a>
+          <div class="news-card-text">
+            <h3>
+              <a href="#"
+                >Want to drive a hydrogen EV in the US? Move to California</a
+              >
+            </h3>
+            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
+            <p class="ter-text">22 minutes ago</p>
+          </div>
+        </div>
+
+        <div class="news-card">
+          <a href="" class="card-img"></a>
+          <div class="news-card-text">
+            <h3>
+              <a href="#"
+                >Want to drive a hydrogen EV in the US? Move to California</a
+              >
+            </h3>
+            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
+            <p class="ter-text">22 minutes ago</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Latest Funding -->
     <section>
       <div class="fund-intro">
