add news section

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <div id="news-card-container">
       <h2><a href="#">Latest news &gt;</a></h2>
       <div class="news-card-container">
+        <!-- jlfksd -->
         <div class="news-card">
           <a href="" class="card-img"></a>
           <div class="news-card-text">
@@ -143,7 +144,8 @@
             <p class="ter-text">22 minutes ago</p>
           </div>
         </div>
-
+        <!-- jlfksd -->
+        <!-- jlfksd -->
         <div class="news-card">
           <a href="" class="card-img"></a>
           <div class="news-card-text">
@@ -156,58 +158,7 @@
             <p class="ter-text">22 minutes ago</p>
           </div>
         </div>
-
-        <div class="news-card">
-          <a href="" class="card-img"></a>
-          <div class="news-card-text">
-            <h3>
-              <a href="#"
-                >Want to drive a hydrogen EV in the US? Move to California</a
-              >
-            </h3>
-            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
-            <p class="ter-text">22 minutes ago</p>
-          </div>
-        </div>
-
-        <div class="news-card">
-          <a href="" class="card-img"></a>
-          <div class="news-card-text">
-            <h3>
-              <a href="#"
-                >Want to drive a hydrogen EV in the US? Move to California</a
-              >
-            </h3>
-            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
-            <p class="ter-text">22 minutes ago</p>
-          </div>
-        </div>
-
-        <div class="news-card">
-          <a href="" class="card-img"></a>
-          <div class="news-card-text">
-            <h3>
-              <a href="#"
-                >Want to drive a hydrogen EV in the US? Move to California</a
-              >
-            </h3>
-            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
-            <p class="ter-text">22 minutes ago</p>
-          </div>
-        </div>
-
-        <div class="news-card">
-          <a href="" class="card-img"></a>
-          <div class="news-card-text">
-            <h3>
-              <a href="#"
-                >Want to drive a hydrogen EV in the US? Move to California</a
-              >
-            </h3>
-            <p><a href="#" class="ter-text"> Matthew Beedham</a></p>
-            <p class="ter-text">22 minutes ago</p>
-          </div>
-        </div>
+        <!-- jlfksd -->
       </div>
     </div>
     <!-- Latest Funding -->
