fix grid align & add images to categories

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         </div>
       </div>
     </section>
-    <!-- <div class="clear"></div> -->
+    <div class="clear"></div>
     <!-- Category -->
     <section class="categories-section">
       <div class="category">
